@@ -534,6 +534,7 @@ All:
 - Add wxDir::Close() method (Silverstorm82).
 - Fix compilation of wxHash{Map,Set} with g++ 4.7 (Nathan Ridge).
 - Fix posting large amounts of data in wxHTTP (Platonides).
+- Add wxFile::ReadAll() for consistency with wxFFile.
 - Added Nepali translation (Him Prasad Gautam).
 
 All (GUI):
